@@ -22,6 +22,8 @@ dVolts = abs(voltage - volts);
 dVolts = dVolts(find(dVolts > 0));
 smallest_dVolts = min(abs(dVolts));
 
+smallest_dVolts = 0.1;
+
 interp_volts(:,1) = min(volts) : smallest_dVolts : max(volts);
 interp_fit        = interp1(volts, fit, interp_volts);
 interp_fiterr     = interp1(volts, fit_err, interp_volts);
